[gd_scene load_steps=7 format=3 uid="uid://bb2g4wmqrqan1"]

[ext_resource type="Script" uid="uid://8k8ahcbgiukl" path="res://assets/scripts/ui/volume_menu.gd" id="1_5qqp5"]
[ext_resource type="AudioStream" uid="uid://dau8l6aqublrn" path="res://assets/audio/sfx/ui_accept.wav" id="1_lamhx"]
[ext_resource type="AudioStream" uid="uid://bm31aan3dooad" path="res://assets/audio/sfx/ui_cancel.wav" id="2_5qqp5"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lamhx"]

[sub_resource type="Theme" id="Theme_5qqp5"]

[sub_resource type="CanvasTexture" id="CanvasTexture_c0ffj"]

[node name="VolumeMenu" type="CanvasLayer"]
script = ExtResource("1_5qqp5")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.203922, 0.380392, 0.490196, 1)
material = SubResource("CanvasItemMaterial_lamhx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5qqp5")
texture = SubResource("CanvasTexture_c0ffj")

[node name="LabelContainer" type="VBoxContainer" parent="."]
offset_left = 332.0
offset_top = 214.0
offset_right = 480.0
offset_bottom = 318.0
scale = Vector2(1.71514, 1.66077)

[node name="MasterVolumeLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
text = "Master Volume:"

[node name="SFXLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
text = "Sound Effects:"

[node name="MusicVolumeLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
text = "Music:"

[node name="DialogueLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
text = "Dialogue:"

[node name="MasterVolumeSlider" type="HSlider" parent="."]
offset_left = 566.0
offset_top = 222.0
offset_right = 714.0
offset_bottom = 238.0
scale = Vector2(1.71514, 1.66077)

[node name="SFXSlider" type="HSlider" parent="."]
offset_left = 566.0
offset_top = 267.0
offset_right = 714.0
offset_bottom = 283.0
scale = Vector2(1.71514, 1.66077)

[node name="MusicVolumeSlider" type="HSlider" parent="."]
offset_left = 566.0
offset_top = 312.0
offset_right = 714.0
offset_bottom = 328.0
scale = Vector2(1.71514, 1.66077)

[node name="DialogueSlider" type="HSlider" parent="."]
offset_left = 566.0
offset_top = 357.0
offset_right = 714.0
offset_bottom = 379.0
scale = Vector2(1.71514, 1.66077)

[node name="BackButton" type="Button" parent="."]
offset_left = 39.0
offset_top = 582.0
offset_right = 180.0
offset_bottom = 614.0
scale = Vector2(1.0292, 1.0292)
text = "Back"

[node name="UI Accept (Mouse Click)" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_lamhx")
bus = &"UI"

[node name="UI Cancel (Back Button)" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5qqp5")
volume_db = 4.5
pitch_scale = 1.02
bus = &"UI"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
